# QNN_abbas

./: CMakeLists.txt  Config.cmake.in  README.md  qnn_abbas.cpp
include/custom-modules/: qnn_abbas.hpp
